audit domain model

--- a/src/Fueller.Domain/Fueller.Domain.csproj
+++ b/src/Fueller.Domain/Fueller.Domain.csproj
@@ -6,7 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
-
-
+    <ItemGroup>
+        <PackageReference Include="DeepCloner" Version="0.10.4" />
+    </ItemGroup>
 
 </Project>
