infrastructure - add entity type configurations for domain model

--- a/src/Fueller.Infrastructure/Fueller.Infrastructure.csproj
+++ b/src/Fueller.Infrastructure/Fueller.Infrastructure.csproj
@@ -10,4 +10,8 @@
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.11" />
     </ItemGroup>
 
+    <ItemGroup>
+        <ProjectReference Include="..\Fueller.Domain\Fueller.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
