initial entity framework migration

--- a/src/Fueller.Api/appsettings.Development.json
+++ b/src/Fueller.Api/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+
+  "ConnectionStrings": {
+    "Postgres": "Host=localhost;Username=postgres;Password=Password123!;Database=Fueller.Api;Include Error Detail=true"
   }
 }
