--- a/src/Fueller.Infrastructure/Fueller.Infrastructure.csproj
+++ b/src/Fueller.Infrastructure/Fueller.Infrastructure.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.11" />
     </ItemGroup>
 
